<resources>
    <string name="app_name">AndroidGameProject</string>
    <string name="button_off">Off</string>
    <string name="button_on">On</string>
    <string name="music">Music</string>
    <string name="zero">0</string>
    <string name="help">Help</string>
    <string name="category">Category: </string>
    <string name="hint"> </string>
    <string name="dark_mode">No content description for now</string>
    <string name="current_player">Player</string>
    <string name="padawan_difficulty">Two answers to select from\n1 point per right answer\nTotal bank of 10 cards per category</string>
    <string name="jedi_difficulty">Three answers to select from\n2 points per right answer\nTotal bank of 20 cards per category</string>
    <string name="jedi_knight_difficulty">Four answers to select from\n3 points per right answer\nTotal bank of 30 cards per category</string>
    <string name="jedi_master_difficulty">Four answers to select from\n4 points per right answer\nTotal bank of 40 cards per category</string>
</resources>
