<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPadawanDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/difficulity" />

    <ImageButton
        android:id="@+id/btnPadawanDifficulty"
        android:layout_width="230dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/padawan_difficulty"
        android:onClick="onClickEasyDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/padawan" />

    <TextView
        android:id="@+id/txtPadawanDifficulty"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:onClick="onClickEasyDifficulty"
        android:text="@string/padawan_difficulty"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPadawanDifficulty" />

    <ImageButton
        android:id="@+id/btnJediDifficulty"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/jedi_difficulty"
        android:onClick="onClickNormalDifficulty"
        app:layout_constraintBottom_toTopOf="@+id/btnJediKnightDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPadawanDifficulty"
        app:srcCompat="@drawable/jedi" />

    <TextView
        android:id="@+id/txtJediDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:onClick="onClickNormalDifficulty"
        android:text="@string/jedi_difficulty"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJediDifficulty" />

    <ImageButton
        android:id="@+id/btnJediKnightDifficulty"
        android:layout_width="262dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/jedi_knight_difficulty"
        android:onClick="onClickHardDifficulty"
        app:layout_constraintBottom_toTopOf="@+id/btnJediMasterDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJediDifficulty"
        app:srcCompat="@drawable/jediknight" />

    <TextView
        android:id="@+id/txtJediKnightDifficulty"
        android:layout_width="263dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:onClick="onClickHardDifficulty"
        android:text="@string/jedi_knight_difficulty"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnJediMasterDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJediKnightDifficulty"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnJediMasterDifficulty"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/jedi_master_difficulty"
        android:onClick="onClickVeryHardDifficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJediKnightDifficulty"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@drawable/jedimaster" />

    <TextView
        android:id="@+id/txtJediMasterDifficulty"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:onClick="onClickVeryHardDifficulty"
        android:text="@string/jedi_master_difficulty"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJediMasterDifficulty"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayoutProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0000000"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center_vertical|center_horizontal|center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/downloadingdata"
            android:gravity="center"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>